# various

./: test.go
convert-deployment/base/deploy/: convert-to-deployment.json  kustomization.yaml
convert-deployment/base/sts/: kustomization.yaml  statefulset.yaml
convert-deployment/overlays/sts/: kustomization.yaml
convert-deployment/overlays/various/: kustomization.yaml
convert-deployment/overlays/various/sts/: kustomization.yaml  statefulset.yaml
convert-deployment/upstream/base/sts/: kustomization.yaml  service.yaml  statefulset.yaml
gcsbucket/: go.mod  go.sum  main.go
gittag/: go.mod  go.sum  main.go
keystore-tests/: BUILD.bazel  main.go
mocking/examples/mocks3/: main.go
mocking/examples/proxying/: go.mod  proxy.go
mocking/examples/sending/: go.mod  send.go
mocking/examples/stringy/: go.mod  string.go
mocking/mocky/: go.mod
mocking/mocky/reporting/: go.mod  report.go  report_client.go  report_test.go  storage_client.txt
mocking/mocky/reporting/mocks/: ReportWriter.go  StorageClienter.go
